minor updates to VR coding challenge

--- a/data/babylonJS/BabylonJS_VR_gLTF.html
+++ b/data/babylonJS/BabylonJS_VR_gLTF.html
@@ -4,7 +4,7 @@ Walter Terkaj (CNR-STIIMA), walter.terkaj@stiima.cnr.it
 Nilda Uzgoren (Politecnico Di Milano), nilda.uzgoren@mail.polimi.it
 Marcello Urgo (Politecnico Di Milano), marcello.urgo@polimi.it
 
-Project: Virtual Factory Learning Toolkit (VLFT), www.vlft.eu
+Project: Virtual Learning Factory Toolkit (VLFT), www.vlft.eu
 -->
 
 
